[project]
name = "polardb-mysql-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "mysql-connector-python>=9.3.0",
    "sqlparse>=0.4.4",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "mammoth>=1.4.0",
]
